--- a/components.json
+++ b/components.json
@@ -11,7 +11,8 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
+    "components": "@/components/molecules",
+    "ui": "@/components/molecules/shadcn",
     "utils": "@/lib/utils"
   }
 }
